--- a/package.json
+++ b/package.json
@@ -36,6 +36,12 @@
     ]
   },
   "devDependencies": {
-    "prettier": "^2.7.1"
+    "@types/jest": "^28.1.4",
+    "@types/lodash": "^4.14.182",
+    "@types/node": "^18.0.1",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
+    "prettier": "^2.7.1",
+    "typescript": "^4.7.4"
   }
 }
